# sgx-tasks

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Server.Dockerfile  benchmark.sh  client.cpp  commands.hpp  driver.cpp  messages.hpp  server.cpp  task.cpp  worker.cpp
applications/: CMakeLists.txt
applications/genomeseq/: CMakeLists.txt  Dockerfile  README.md  client.cpp  commands.cpp  commands.hpp  index.hpp  insecworker.cpp  metadata.cpp  metadata.hpp  server.cpp  task.cpp  unsecworker.cpp  worker_types.hpp
applications/genomeseq/jobs/: dispatch_job.hpp  index_job.hpp  job_handlers.hpp  job_utils.hpp  merge_job.hpp  partition_job.hpp  search_job.hpp
applications/genomeseq/kubernetes/: InSecure.Dockerfile  Secure.Dockerfile  insecworker.yaml  nfs.yaml  secgraphene.yaml  secworker.yaml  server.yaml  sgx.yaml  unsecworker.yaml  worker.yaml
applications/genomeseq/kubernetes/graphene/: Dockerfile
applications/genomeseq/kubernetes/sgx/: Dockerfile
bio-sgx/: split.py
common/: CMakeLists.txt  messages.cpp
common/include/: command.hpp  messages.hpp  uuid.hpp
driver/: CMakeLists.txt  driver.cpp  executor.cpp  job.cpp  main.cpp
driver/include/: driver.hpp  executor.hpp  job.hpp  worker.hpp  worker_handler.hpp
kubernetes/: cient_ingress.yaml  nfs.yaml  server.yaml  worker.yaml
worker/: CMakeLists.txt  main.cpp  worker.cpp
worker/include/: worker.hpp
